# tokeisrv

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  deploy-your-own-service.md  docker-compose.yml  docker-startup.sh
.github/workflows/: multiarch-docker.yaml  release.yml
_sensitive_datas/: .gitignore  _sensitive_datas.tar.xz.enc  _sensitive_datas.tar.xz.sha256  store_sensitive_datas
helm/tokeisrv/: Chart.yaml  values.schema.json  values.yaml
helm/tokeisrv/charts/: cloudflared-0.1.0.tgz  cloudflared-0.1.1.tgz  cloudflared-0.1.3.tgz
helm/tokeisrv/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
