[package]
authors = ["Erin Power <xampprocky@gmail.com>", "Ronan Le Meillat"]
name = "tokei_rs"
version = "0.3.1"
edition = "2021"

[dependencies]
tokei = "12.1"
dotenv = "0.15"
tempfile = "3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
once_cell = "1.18"
cached = "0.56"
actix-web = "4.4"
eyre = "0.6"
env_logger = "0.11"
rsbadges = "1.1"
csscolorparser = "0.8"
git2 = { version = "0.20", features = ["https"] }
openssl = { version = "0.10", features = ["vendored"] }
